package account_unit_test

import (
	"bytes"
	"context"
	"encoding/json"
	"errors"
	"fmt"
	"net/http"
	"net/http/httptest"
	"strings"
	"sync"
	"testing"

	dto "english-ai-full/internal/account/account_dto"
	res "english-ai-full/internal/account"
	"english-ai-full/internal/model"
	pb "english-ai-full/internal/proto_qr/account"

	"github.com/go-chi/chi"
	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/mock"
)

// Integration test for multiple operations
func TestHandler_IntegrationScenarios(t *testing.T) {
	defer cleanupHandlerTest()
	
	t.Run("complete user lifecycle", func(t *testing.T) {
		_, mockClient := setupHandlerTest()

		// 1. Register user
		mockClient.On("Register", mock.Anything, mock.Anything).Return(&pb.RegisterRes{
			Id:      1,
			Name:    "Test User",
			Email:   "test@example.com",
			Success: true,
		}, nil).Once()

		// 2. Login user
		mockClient.On("Login", mock.Anything, mock.Anything).Return(&pb.AccountRes{
			Account: &pb.Account{
				Id:       1,
				BranchId: 1,
				Name:     "Test User",
				Email:    "test@example.com",
				Role:     "user",
			},
		}, nil).Once()

		// 3. Update user
		mockClient.On("UpdateUser", mock.Anything, mock.Anything).Return(&pb.AccountRes{
			Account: &pb.Account{
				Id:       1,
				BranchId: 1,
				Name:     "Updated User",
				Email:    "test@example.com",
				Role:     "user",
			},
		}, nil).Once()

		// 4. Change password
		mockClient.On("ChangePassword", mock.Anything, mock.Anything).Return(&pb.ChangePasswordRes{
			Success: true,
			Message: "Password changed successfully",
		}, nil).Once()

		// 5. Logout user
		mockClient.On("Logout", mock.Anything, mock.Anything).Return(&pb.LogoutRes{
			Success: true,
			Message: "Logged out successfully",
		}, nil).Once()

		// Execute all operations and verify they work together
		// This would be a more complex test in practice
		mockClient.AssertExpectations(t)
	})
}

// Test error handling scenarios
// func TestHandler_ErrorHandlingScenarios(t *testing.T) {
// 	defer cleanupHandlerTest()
	
// 	tests := []struct {
// 		name        string
// 		operation   string
// 		mockSetup   func(*MockAccountServiceClient)
// 		requestFunc func(*res.Handler) (*httptest.ResponseRecorder, error)
// 	}{
// 		{
// 			name:      "network timeout simulation",
// 			operation: "login",
// 			mockSetup: func(m *MockAccountServiceClient) {
// 				m.On("Login", mock.Anything, mock.Anything).Return(
// 					(*pb.AccountRes)(nil), errors.New("context deadline exceeded"))
// 			},
// 			requestFunc: func(handler *res.Handler) (*httptest.ResponseRecorder, error) {
// 				body := bytes.NewBuffer([]byte(`{"email":"test@example.com","password":"password"}`))
// 				req := httptest.NewRequest(http.MethodPost, "/login", body)
// 				req.Header.Set("Content-Type", "application/json")
// 				w := httptest.NewRecorder()
// 				handler.Login(w, req)
// 				return w, nil
// 			},
// 		},
// 		{
// 			name:      "database connection error",
// 			operation: "find_all_users",
// 			mockSetup: func(m *MockAccountServiceClient) {
// 				m.On("FindAllUsers", mock.Anything, mock.Anything).Return(
// 					(*pb.AccountList)(nil), errors.New("database connection refused"))
// 			},
// 			requestFunc: func(handler *res.Handler) (*httptest.ResponseRecorder, error) {
// 				req := httptest.NewRequest(http.MethodGet, "/users", nil)
// 				w := httptest.NewRecorder()
// 				handler.FindAllUsers(w, req)
// 				return w, nil
// 			},
// 		},
// 	}

// 	for _, tt := range tests {
// 		t.Run(tt.name, func(t *testing.T) {
// 			handler, mockClient := setupHandlerTest()
// 			tt.mockSetup(mockClient)

// 			w, err := tt.requestFunc(&handler)
// 			assert.NoError(t, err)
// 			assert.Equal(t, http.StatusInternalServerError, w.Code)
// 			mockClient.AssertExpectations(t)
// 		})
// 	}
// }

// Test concurrent access scenarios


// Test validation scenarios
func TestHandler_ValidationScenarios(t *testing.T) {
	defer cleanupHandlerTest()
	
	tests := []struct {
		name           string
		requestBody    interface{}
		endpoint       string
		method         string
		expectedStatus int
		description    string
	}{
		{
			name: "invalid email format in registration",
			requestBody: model.RegisterUserReq{
				Name:     "Test User",
				Email:    "invalid-email",
				Password: "password123",
			},
			endpoint:       "/register",
			method:         http.MethodPost,
			expectedStatus: http.StatusBadRequest,
			description:    "Should reject invalid email format",
		},
		{
			name: "password too short in registration",
			requestBody: model.RegisterUserReq{
				Name:     "Test User",
				Email:    "test@example.com",
				Password: "123",
			},
			endpoint:       "/register",
			method:         http.MethodPost,
			expectedStatus: http.StatusBadRequest,
			description:    "Should reject password shorter than minimum length",
		},
		{
			name: "missing required fields in user creation",
			requestBody: dto.CreateUserRequest{
				Name:  "Test User",
				Email: "test@example.com",
				// Missing required fields: Password, BranchID, OwnerID
			},
			endpoint:       "/accounts",
			method:         http.MethodPost,
			expectedStatus: http.StatusBadRequest,
			description:    "Should reject request with missing required fields",
		},
		{
			name: "invalid user ID in update request",
			requestBody: dto.UpdateAccountStatusRequest{
				UserID: -1, // Invalid negative ID
				Status: "active",
			},
			endpoint:       "/users/-1/status",
			method:         http.MethodPut,
			expectedStatus: http.StatusBadRequest,
			description:    "Should reject negative user ID",
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			handler, _ := setupHandlerTest()

			body, _ := json.Marshal(tt.requestBody)
			req := httptest.NewRequest(tt.method, tt.endpoint, bytes.NewBuffer(body))
			req.Header.Set("Content-Type", "application/json")
			
			// Add route context if needed
			if strings.Contains(tt.endpoint, "/-1/") {
				rctx := chi.NewRouteContext()
				rctx.URLParams.Add("id", "-1")
				req = req.WithContext(context.WithValue(req.Context(), chi.RouteCtxKey, rctx))
			}
			
			w := httptest.NewRecorder()

			// Route to appropriate handler based on endpoint
			switch tt.endpoint {
			case "/register":
				handler.Register(w, req)
			case "/accounts":
				handler.CreateAccount(w, req)
			case "/users/-1/status":
				handler.UpdateAccountStatus(w, req)
			}

			assert.Equal(t, tt.expectedStatus, w.Code, tt.description)
		})
	}
}

// Performance test scenarios
func TestHandler_PerformanceScenarios(t *testing.T) {
	defer cleanupHandlerTest()
	
	t.Run("bulk user operations", func(t *testing.T) {
		handler, mockClient := setupHandlerTest()
		
		// Mock for bulk operations
		mockClient.On("CreateUser", mock.Anything, mock.Anything).Return(&pb.Account{
			Id:       1,
			BranchId: 1,
				Name:     "Test User", // Use actual string value
			Email:    "test@example.com", // Use actual string value
			Role:     "user",
		}, nil).Times(100)

		// Test creating 100 users sequentially
		for i := 0; i < 100; i++ {
			userReq := dto.CreateUserRequest{
				BranchID: 1,
				Name:     fmt.Sprintf("Bulk User %d", i),
				Email:    fmt.Sprintf("bulk%d@example.com", i),
				Password: "password123",
				Role:     "user",
				OwnerID:  1,
			}
			
			body, _ := json.Marshal(userReq)
			req := httptest.NewRequest(http.MethodPost, "/accounts", bytes.NewBuffer(body))
			req.Header.Set("Content-Type", "application/json")
			w := httptest.NewRecorder()
			
			handler.CreateAccount(w, req)
			assert.Equal(t, http.StatusCreated, w.Code, "Bulk user creation %d failed", i)
		}
		
		mockClient.AssertExpectations(t)
	})
}

// Edge case testing
func TestHandler_EdgeCases(t *testing.T) {
	defer cleanupHandlerTest()
	
	tests := []struct {
		name        string
		description string
		testFunc    func(t *testing.T)
	}{
		{
			name:        "empty request body handling",
			description: "Should handle empty request bodies gracefully",
			testFunc: func(t *testing.T) {
				handler, _ := setupHandlerTest()
				
				req := httptest.NewRequest(http.MethodPost, "/register", bytes.NewBuffer([]byte("")))
				req.Header.Set("Content-Type", "application/json")
				w := httptest.NewRecorder()
				
				handler.Register(w, req)
				assert.Equal(t, http.StatusBadRequest, w.Code)
			},
		},
		{
			name:        "extremely long input handling",
			description: "Should handle extremely long inputs",
			testFunc: func(t *testing.T) {
				handler, _ := setupHandlerTest()
				
				longString := strings.Repeat("a", 10000)
				userReq := model.RegisterUserReq{
					Name:     longString,
					Email:    "test@example.com",
					Password: "password123",
				}
				
				body, _ := json.Marshal(userReq)
				req := httptest.NewRequest(http.MethodPost, "/register", bytes.NewBuffer(body))
				req.Header.Set("Content-Type", "application/json")
				w := httptest.NewRecorder()
				
				handler.Register(w, req)
				// Should either validate and reject or handle gracefully
				assert.True(t, w.Code == http.StatusBadRequest || w.Code == http.StatusInternalServerError)
			},
		},
		{
			name:        "special characters in input",
			description: "Should handle special characters correctly",
			testFunc: func(t *testing.T) {
				handler, mockClient := setupHandlerTest()
				
				mockClient.On("Register", mock.Anything, mock.Anything).Return(&pb.RegisterRes{
					Id:      1,
					Name:    "Test User ñáéíóú",
					Email:   "test@example.com",
					Success: true,
				}, nil)
				
				userReq := model.RegisterUserReq{
					Name:     "Test User ñáéíóú",
					Email:    "test@example.com",
					Password: "password123",
				}
				
				body, _ := json.Marshal(userReq)
				req := httptest.NewRequest(http.MethodPost, "/register", bytes.NewBuffer(body))
				req.Header.Set("Content-Type", "application/json")
				w := httptest.NewRecorder()
				
				handler.Register(w, req)
				assert.Equal(t, http.StatusCreated, w.Code)
				mockClient.AssertExpectations(t)
			},
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			tt.testFunc(t)
		})
	}
}

// Security testing scenarios
func TestHandler_SecurityScenarios(t *testing.T) {
	defer cleanupHandlerTest()
	
	t.Run("SQL injection attempt", func(t *testing.T) {
		handler, mockClient := setupHandlerTest()
		
		// Mock should still be called with the malicious input
		mockClient.On("FindByEmail", mock.Anything, mock.Anything).Return(
			(*pb.AccountRes)(nil), errors.New("user not found"))
		
		maliciousEmail := "test@example.com'; DROP TABLE users; --"
		req := httptest.NewRequest(http.MethodGet, "/accounts/email/"+maliciousEmail, nil)
		
		rctx := chi.NewRouteContext()
		rctx.URLParams.Add("email", maliciousEmail)
		req = req.WithContext(context.WithValue(req.Context(), chi.RouteCtxKey, rctx))
		
		w := httptest.NewRecorder()
		handler.FindByEmail(w, req)
		
		// Should handle gracefully without causing issues
		assert.True(t, w.Code >= 400) // Should return an error status
		mockClient.AssertExpectations(t)
	})
	
	t.Run("XSS attempt in user data", func(t *testing.T) {
		handler, mockClient := setupHandlerTest()
		
		mockClient.On("Register", mock.Anything, mock.Anything).Return(&pb.RegisterRes{
			Id:      1,
			Name:    "<script>alert('xss')</script>",
			Email:   "test@example.com",
			Success: true,
		}, nil)
		
		userReq := model.RegisterUserReq{
			Name:     "<script>alert('xss')</script>",
			Email:    "test@example.com",
			Password: "password123",
		}
		
		body, _ := json.Marshal(userReq)
		req := httptest.NewRequest(http.MethodPost, "/register", bytes.NewBuffer(body))
		req.Header.Set("Content-Type", "application/json")
		w := httptest.NewRecorder()
		
		handler.Register(w, req)
		// Should process the request (input sanitization should happen at the service layer)
		mockClient.AssertExpectations(t)
	})
}

func TestHandler_ErrorHandlingScenarios(t *testing.T) {
	defer cleanupHandlerTest()
	
	tests := []struct {
		name        string
		operation   string
		mockSetup   func(*MockAccountServiceClient)
		requestFunc func(*res.Handler) (*httptest.ResponseRecorder, error)
	}{
		{
			name:      "network timeout simulation",
			operation: "login",
			mockSetup: func(m *MockAccountServiceClient) {
				m.On("Login", mock.Anything, mock.Anything).Return(
					(*pb.AccountRes)(nil), errors.New("context deadline exceeded"))
			},
			requestFunc: func(handler *res.Handler) (*httptest.ResponseRecorder, error) {
				body := bytes.NewBuffer([]byte(`{"email":"test@example.com","password":"password"}`))
				req := httptest.NewRequest(http.MethodPost, "/login", body)
				req.Header.Set("Content-Type", "application/json")
				w := httptest.NewRecorder()
				handler.Login(w, req)
				return w, nil
			},
		},
		{
			name:      "database connection error",
			operation: "find_all_users",
			mockSetup: func(m *MockAccountServiceClient) {
				m.On("FindAllUsers", mock.Anything, mock.Anything).Return(
					(*pb.AccountList)(nil), errors.New("database connection refused"))
			},
			requestFunc: func(handler *res.Handler) (*httptest.ResponseRecorder, error) {
				req := httptest.NewRequest(http.MethodGet, "/users", nil)
				w := httptest.NewRecorder()
				handler.FindAllUsers(w, req)
				return w, nil
			},
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			handler, mockClient := setupHandlerTest()
			tt.mockSetup(mockClient)

			// Fix: Pass handler directly instead of &handler
			w, err := tt.requestFunc(handler)
			assert.NoError(t, err)
			assert.Equal(t, http.StatusInternalServerError, w.Code)
			mockClient.AssertExpectations(t)
		})
	}
}

func TestHandler_ConcurrentAccess(t *testing.T) {
	defer cleanupHandlerTest()
	
	t.Run("concurrent user creation", func(t *testing.T) {
		handler, mockClient := setupHandlerTest()
		
		// Setup mock for concurrent requests - provide actual return values
		mockClient.On("CreateUser", mock.Anything, mock.Anything).Return(&pb.Account{
			Id:       1, // Use actual int64 value
			BranchId: 1,
			Name:     "Test User", // Use actual string value
			Email:    "test@example.com", // Use actual string value
			Role:     "user",
		}, nil).Times(5)

		// Simulate concurrent requests
		var wg sync.WaitGroup
		results := make([]int, 5)
		
		for i := 0; i < 5; i++ {
			wg.Add(1)
			go func(index int) {
				defer wg.Done()
				
				userReq := dto.CreateUserRequest{
					ID:       int64(index + 1), // Add missing ID field
					BranchID: 1,
					Name:     fmt.Sprintf("User %d", index),
					Email:    fmt.Sprintf("user%d@example.com", index),
					Password: "password123",
					Role:     "user",
					OwnerID:  1,
				}
				
				body, _ := json.Marshal(userReq)
				req := httptest.NewRequest(http.MethodPost, "/accounts", bytes.NewBuffer(body))
				req.Header.Set("Content-Type", "application/json")
				w := httptest.NewRecorder()
				
				handler.CreateAccount(w, req)
				results[index] = w.Code
			}(i)
		}
		
		wg.Wait()
		
		// Verify all requests succeeded
		for i, code := range results {
			assert.Equal(t, http.StatusCreated, code, "Request %d failed", i)
		}
		
		mockClient.AssertExpectations(t)
	})
}
